--- a/body.css
+++ b/body.css
@@ -1,4 +1,3 @@
-# PixelArtmaker
 body {
     text-align: center;
 }
@@ -23,4 +22,15 @@ table, tr, td {
 
 table {
     border-collapse: collapse;
-m
+    margin: 0 auto;
+    background-color: white;
+    padding: 3px ;
+}
+
+tr {
+    height: 20px;
+}
+
+td {
+    width: 20px;
+}
